--- a/src/YannickMahe/SelfHostedVideosBundle/Resources/config/routing.yml
+++ b/src/YannickMahe/SelfHostedVideosBundle/Resources/config/routing.yml
@@ -1,11 +1,23 @@
 yannick_mahe_self_hosted_videos_homepage:
     pattern:  /
     defaults: { _controller: YannickMaheSelfHostedVideosBundle:Default:index }
+    requirements:
+        _method:  GET
 
 yannick_mahe_self_hosted_videos_list:
     pattern:  /list
     defaults: { _controller: YannickMaheSelfHostedVideosBundle:Default:list }
+    requirements:
+        _method:  GET
 
 yannick_mahe_self_hosted_videos_video:
     pattern:  /list/{video_id}
     defaults: { _controller: YannickMaheSelfHostedVideosBundle:Default:video }
+    requirements:
+        _method:  GET
+
+yannick_mahe_self_hosted_videos_upload:
+    pattern:  /upload
+    defaults: { _controller: YannickMaheSelfHostedVideosBundle:Default:upload }
+    requirements:
+        _method:  POST
