--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -39,4 +39,4 @@ security:
             #    realm: "Secured Demo Area"
 
     access_control:
-        #- { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
+        #- { path: /.*, role: ROLE_USER }
