--- a/src/YannickMahe/SelfHostedVideosBundle/Resources/config/routing.yml
+++ b/src/YannickMahe/SelfHostedVideosBundle/Resources/config/routing.yml
@@ -10,6 +10,12 @@ yannick_mahe_self_hosted_videos_add_from_file:
     requirements:
         _method:  GET
 
+yannick_mahe_self_hosted_videos_add_video_from_file:
+    pattern:  /add_from_file
+    defaults: { _controller: YannickMaheSelfHostedVideosBundle:Default:addVideoFromFile }
+    requirements:
+        _method:  POST
+
 yannick_mahe_self_hosted_videos_list:
     pattern:  /
     defaults: { _controller: YannickMaheSelfHostedVideosBundle:Default:list }
