--- a/src/YannickMahe/SelfHostedVideosBundle/Resources/config/routing.yml
+++ b/src/YannickMahe/SelfHostedVideosBundle/Resources/config/routing.yml
@@ -23,8 +23,8 @@ yannick_mahe_self_hosted_videos_list:
         _method:  GET
 
 yannick_mahe_self_hosted_videos_video:
-    pattern:  /video/{video_id}
-    defaults: { _controller: YannickMaheSelfHostedVideosBundle:Default:video }
+    pattern:  /video/{video_id}/{subtitle_id}
+    defaults: { _controller: YannickMaheSelfHostedVideosBundle:Default:video, subtitle_id: false }
     requirements:
         _method:  GET
 
@@ -37,5 +37,11 @@ yannick_mahe_self_hosted_videos_delete:
 yannick_mahe_self_hosted_videos_upload:
     pattern:  /upload
     defaults: { _controller: YannickMaheSelfHostedVideosBundle:Default:upload }
+    requirements:
+        _method:  POST
+
+yannick_mahe_self_hosted_videos_subtitle_add:
+    pattern: /subtitle_add
+    defaults: { _controller: YannickMaheSelfHostedVideosBundle:Subtitle:add }
     requirements:
         _method:  POST
