--- a/src/YannickMahe/SelfHostedVideosBundle/Resources/config/routing.yml
+++ b/src/YannickMahe/SelfHostedVideosBundle/Resources/config/routing.yml
@@ -28,6 +28,12 @@ yannick_mahe_self_hosted_videos_video:
     requirements:
         _method:  GET
 
+yannick_mahe_self_hosted_videos_videos_json:
+    pattern:  /videos.json
+    defaults: { _controller: YannickMaheSelfHostedVideosBundle:Default:videosJson }
+    requirements:
+        _method:  GET
+
 yannick_mahe_self_hosted_videos_delete:
     pattern:  /video/delete/{video_id}
     defaults: { _controller: YannickMaheSelfHostedVideosBundle:Default:delete }
